Refactor objectstore
