# templates/oas/model-manager-oas.yaml
@@ -6,11 +6,10 @@ info:
 servers:
   - url: 'http://model-manager.os4ml.svc.cluster.local:8000'
 paths:
-
   "/apis/v1beta1/model-manager/solvers":
     get:
-      summary: 'get all solver'
-      operationId: getAllSolvers
+      summary: 'get solvers'
+      operationId: getSolvers
       tags:
         - modelmanager
       responses:
@@ -22,6 +21,100 @@ paths:
                 type: array
                 items:
                   $ref: './shared-oas.yaml#/components/schemas/Solver'
+
+  "/apis/v1beta1/model-manager/databags":
+    get:
+      summary: "get databags"
+      operationId: getDatabags
+      tags:
+        - modelmanager
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: './shared-oas.yaml#/components/schemas/Databag'
+    post:
+      summary: "create databag"
+      operationId: postDatabag
+      tags:
+        - modelmanager
+      parameters:
+        - $ref: '#/components/parameters/DatabagId'
+      responses:
+        201:
+          description: "Resource created"
+          content:
+            application/json:
+              schema:
+                $ref: './shared-oas.yaml#/components/schemas/Databag'
+
+"/apis/v1beta1/model-manager/databags/{databagId}":
+  get:
+    summary: "get databag by id"
+    operationId: getDatabagById
+    tags:
+      - modelmanager
+    parameters:
+      - $ref: '#/components/parameters/DatabagId'
+    responses:
+      200:
+        description: OK
+        content:
+          application/json:
+            schema:
+              $ref: './shared-oas.yaml#/components/schemas/Databag'
+      404:
+        $ref: '#/components/responses/NotFound'
+  put:
+    summary: "update databag"
+    operationId: putDatabagById
+    tags:
+      - modelmanager
+    parameters:
+      - $ref: '#/components/parameters/DatabagId'
+    requestBody:
+      content:
+        application/json:
+          schema:
+            $ref: './shared-oas.yaml#/components/schemas/Databag'
+    responses:
+      201:
+        $ref: '#/components/responses/DatabagCreated'
+      404:
+        $ref: '#/components/responses/NotFound'
+  delete:
+    summary: "delete Databag"
+    operationId: deleteDatabagById
+    tags:
+      - modelmanager
+    parameters:
+      - $ref: '#/components/parameters/DatabagId'
+    responses:
+      204:
+        $ref: '#/components/responses/Deleted'
+
+"/apis/v1beta1/model-manager/databags/{databagId}/dataset":
+  put:
+    summary: "upload dataset"
+    operationId: uploadDataset
+    tags:
+      - modelmanager
+    parameters:
+      - $ref: '#/components/parameters/DatabagId'
+      - $ref: './shared-oas.yaml#/components/parameters/User'
+    requestBody:
+      content:
+        application/octet-stream:
+          schema:
+            type: string
+            format: binary
+    responses:
+      201:
+        description: Created
 
 #  "/solvers/{solverName}":
 #    get:
@@ -149,6 +242,13 @@ components:
         - message
         - status
   parameters:
+    DatabagId:
+      name: databagId
+      in: path
+      description: Id of Databag
+      required: true
+      schema:
+        $ref: './shared-oas.yaml#/components/schemas/DatabagId'
     SolverName:
       name: solverName
       in: path
